--- a/LocalNicoMyList/LocalNicoMyList.csproj
+++ b/LocalNicoMyList/LocalNicoMyList.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SharpHeaderCookie, Version=1.0.8.0, Culture=neutral, PublicKeyToken=c6c3adb7075a293b, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpHeaderCookie.1.0.8\lib\net452\SharpHeaderCookie.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -134,6 +138,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Readme-SharpHeaderCookie.txt" />
+    <Content Include="x86\IEPCookie.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.103\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.103\build\net451\System.Data.SQLite.Core.targets')" />
