起動時、ニコニコ動画にログイン状態のクッキーが取得できない場合、メッセージを表示するようにした。

--- a/LocalNicoMyList/packages.config
+++ b/LocalNicoMyList/packages.config
@@ -7,4 +7,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.103" targetFramework="net452" />
   <package id="System.Data.SQLite.Linq" version="1.0.103" targetFramework="net452" />
+  <package id="Windows7APICodePack" version="1.0.0.0" targetFramework="net452" />
 </packages>
