fixed #5 終了時、選択フォルダ、ソート種類を保存して、起動時に復元するようにした。

--- a/LocalNicoMyList/App.config
+++ b/LocalNicoMyList/App.config
@@ -44,6 +44,12 @@
       <setting name="Folder_Width" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="LastSelectedFolderId" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="LastSelectedSortKind" serializeAs="String">
+        <value>CreateTimeDescend</value>
+      </setting>
     </LocalNicoMyList.Properties.Settings>
   </userSettings>
 </configuration>
