fixed #7 getflvをON/OFFできるようにした。

--- a/LocalNicoMyList/App.config
+++ b/LocalNicoMyList/App.config
@@ -50,6 +50,9 @@
       <setting name="LastSelectedSortKind" serializeAs="String">
         <value>CreateTimeDescend</value>
       </setting>
+      <setting name="IsCheckedGetflv" serializeAs="String">
+        <value>True</value>
+      </setting>
     </LocalNicoMyList.Properties.Settings>
   </userSettings>
 </configuration>
