--- a/LocalNicoMyList/Properties/Settings.settings
+++ b/LocalNicoMyList/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="LastSelectedSortKind" Type="System.String" Scope="User">
       <Value Profile="(Default)">CreateTimeDescend</Value>
     </Setting>
+    <Setting Name="IsCheckedGetflv" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
