closed #9 タイトルフィルター機能を実装。表示バージョンを1.20に変更。

--- a/LocalNicoMyList/LocalNicoMyList.csproj
+++ b/LocalNicoMyList/LocalNicoMyList.csproj
@@ -170,6 +170,8 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Readme-SharpHeaderCookie.txt" />
+    <Resource Include="Resources\Images\filter_off.png" />
+    <Resource Include="Resources\Images\filter_on.png" />
     <Content Include="x86\IEPCookie.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
