フォルダ一覧のドロップの実装にbehaviorを使うように変更。

--- a/LocalNicoMyList/LocalNicoMyList.csproj
+++ b/LocalNicoMyList/LocalNicoMyList.csproj
@@ -107,6 +107,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DragDropListView\AcceptDrop.cs" />
+    <Compile Include="DragDropListView\AcceptDropSpecifications.cs" />
     <Compile Include="FolderItemDragDropBehavior.cs" />
     <Compile Include="FolderView.xaml.cs">
       <DependentUpon>FolderView.xaml</DependentUpon>
