--- a/LocalNicoMyList/packages.config
+++ b/LocalNicoMyList/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="DynamicJson" version="1.2.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="SharpDX" version="3.1.1" targetFramework="net452" />
+  <package id="SharpDX.Direct2D1" version="3.1.1" targetFramework="net452" />
+  <package id="SharpDX.Direct3D11" version="3.1.1" targetFramework="net452" />
+  <package id="SharpDX.Direct3D9" version="3.1.1" targetFramework="net452" />
+  <package id="SharpDX.DXGI" version="3.1.1" targetFramework="net452" />
   <package id="SharpHeaderCookie" version="1.0.8" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.103" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net452" />
