--- a/LocalNicoMyList/packages.config
+++ b/LocalNicoMyList/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DynamicJson" version="1.2.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="Microsoft.Wpf.Interop.DirectX-x64" version="0.9.0-beta-22856" targetFramework="net452" />
   <package id="SharpHeaderCookie" version="1.0.8" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.103" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net452" />
